Fix: header on top (z-index)

--- a/NMWeb/src/app/app.component.scss
+++ b/NMWeb/src/app/app.component.scss
@@ -1,3 +1,7 @@
+app-header {
+  position: relative;
+  z-index: 100;
+}
 
 .content-container{
     margin-top:0px;
