--- a/NMWeb/src/app/core/header/header.component.scss
+++ b/NMWeb/src/app/core/header/header.component.scss
@@ -1,4 +1,5 @@
 
+
 .toolbar-icon {
   padding: 0 14px;
 }
@@ -16,10 +17,6 @@
     //background: rgba(255, 255, 255, 0.75);
     background: rgba(0,0,0, 1);
     color: black;
-    z-index: 10;
-    //position: fixed;
-    top:0px;
-    left: 0px;
     box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
 }
 
@@ -31,5 +28,8 @@ button {
 
 md-toolbar {
   //margin-left: 10px !important;
-  padding-left: 10px !important
+  padding-left: 10px !important;
+  position: relative;
+  z-index: 100;
+
 }
